--- a/backend/microservices/budget-service/src/main/resources/application.yml
+++ b/backend/microservices/budget-service/src/main/resources/application.yml
@@ -4,25 +4,24 @@ server:
 spring:
     application:
         name: BUDGET-SERVICE
-    datasource:
-        url: jdbc:postgresql://localhost:5432/postgres
-        username: postgres
-        password: Shivek01
-        name: postgres
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: false
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.PostgreSQLDialect
-                format_sql: true
 
-eureka:
-    client:
-        register-with-eureka: true
-        fetch-registry: true
-        service-url:
-            defaultZone: http://localhost:8761/eureka/
-        instance:
-            hostname: localhost
+        datasource:
+            url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
+            username: postgres
+            password: 310PB!Gq%f&J
+        jpa:
+            hibernate:
+                ddl-auto: update
+            show-sql: false
+            properties:
+                hibernate:
+                    dialect: org.hibernate.dialect.PostgreSQLDialect
+                    format_sql: true
+    eureka:
+        client:
+            register-with-eureka: true
+            fetch-registry: true
+            service-url:
+                defaultZone: http://localhost:8761/eureka/
+            instance:
+                hostname: localhost
