--- a/backend/microservices/checklist-service/src/main/resources/application.yml
+++ b/backend/microservices/checklist-service/src/main/resources/application.yml
@@ -4,11 +4,11 @@ server:
 spring:
   application:
     name: CHECKLIST-SERVICE
+
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
     username: postgres
-    password: Shivek01
-    name: postgres
+    password: 310PB!Gq%f&J
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,7 +17,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-
 eureka:
   client:
     register-with-eureka: true
