--- a/backend/microservices/budget-service/pom.xml
+++ b/backend/microservices/budget-service/pom.xml
@@ -56,7 +56,13 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>user-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
