--- a/alex_flutter/adventure_it/android/app/src/main/AndroidManifest.xml
+++ b/alex_flutter/adventure_it/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.adventure_it">
+    package="com.adventureit">
    <application
         android:label="adventure_it"
         android:icon="@mipmap/ic_launcher">
