--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   date_range_picker: ^1.0.5
   date_count_down: ^0.0.2
   provider: ^5.0.0
+  numberpicker: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
