--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   date_count_down: ^0.0.2
   provider: ^5.0.0
   numberpicker: ^2.1.1
+  grouped_list: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
