--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^5.0.0
   numberpicker: ^2.1.1
   grouped_list: ^4.1.0
+  flutter_google_places: ^0.3.0
+  geocoder: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
