--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   grouped_list: ^4.1.0
   flutter_google_places: ^0.3.0
   geocoder: ^0.2.1
-
+  pie_chart: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
