--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   numberpicker: ^2.1.1
   grouped_list: ^4.1.0
   fl_chart: ^0.36.3
+  file_picker: ^4.0.0
+  http_parser: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
