--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   fl_chart: ^0.36.3
   file_picker: ^4.0.0
   http_parser: ^4.0.0
-  dio: ^4.0.0
+  flutter_staggered_grid_view: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
