--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   file_picker: ^4.0.0
   http_parser: ^4.0.0
   flutter_staggered_grid_view: ^0.4.0
-
+  flutter_downloader: ^1.6.1
+  path_provider: ^2.0.2
+  downloads_path_provider: ^0.1.0
+  filesystem_picker: ^2.0.0-nullsafety.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
