--- a/alex_flutter/adventure_it/pubspec.yaml
+++ b/alex_flutter/adventure_it/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,12 +33,9 @@ dependencies:
   grouped_list: ^4.1.0
   fl_chart: ^0.36.3
   flutter_downloader: ^1.6.1
-  path_provider: ^2.0.2
-  filesystem_picker: ^2.0.0-nullsafety.0
   file_picker: ^4.0.0
   http_parser: ^4.0.0
   flutter_staggered_grid_view: ^0.4.0
-  flutter_downloader: ^1.6.1
   path_provider: ^2.0.2
   downloads_path_provider: ^0.1.0
   filesystem_picker: ^2.0.0-nullsafety.0
@@ -57,7 +54,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
