--- a/backend/microservices/media-service/pom.xml
+++ b/backend/microservices/media-service/pom.xml
@@ -71,6 +71,11 @@
             <version>0.0.20131108.vaadin1</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>7.0.1</version>
+		</dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -101,5 +106,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
