--- a/backend/backend-environment.yml
+++ b/backend/backend-environment.yml
@@ -2,254 +2,155 @@
 # Below is the configuration for each of the components of the system
 
 # Keycloak
-keycloak:
-  oauth2:
-    resourceserver:
-      jwt:
-        issuer-uri: http://localhost:8080/auth/realms/adventure-it
+keycloak.oauth2.resourceserver.jwt.issuer-uri: http://localhost:8080/auth/realms/adventure-it
 
 # Service Registry (clients)
-service-registry-client:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
+service-registry-client.client.register-with-eureka: "true"
+service-registry-client.client.fetch-registry: "true"
+service-registry-client.client.service-url.defaultZone: "http://localhost:8761/eureka/"
+service-registry-client.instance.hostname: "localhost"
 
 # Service Registry (server)
-service-registry-server:
-  name: SERVICE-REGISTRY
-  port: 8761
-  eureka:
-    client:
-      register-with-eureka: false
-      fetch-registry: false
+service-registry-server.port: "8761"
+service-registry-server.application-name: "SERVICE-REGISTRY"
+service-registry-server.eureka.client.register-with-eureka: "false"
+service-registry-server.eureka.client.fetch-registry: "false"
 
 # Main-controller
-main-controller:
-  port: 9999
-  application-name: MAIN-CONTROLLER
+main-controller.port: 9999
+main-controller.application-name: MAIN-CONTROLLER
 
 # Adventure Microservice
-adventure-microservice:
-  port: 9001
-  application-name: ADVENTURE-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+
+adventure-microservice.port: "9001"
+adventure-microservice.application-name: "ADVENTURE-MICROSERVICE"
+adventure-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+adventure-microservice.datasource.username: "postgres"
+adventure-microservice.datasource.password: "1234"
+adventure-microservice.datasource.hikari.maximum-pool-size: "2"
+adventure-microservice.jpa.hibernate.ddl-auto: "update"
+adventure-microservice.jpa.show-sql: "false"
+adventure-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+adventure-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Budget Microservice
-budget-microservice:
-  port: 9007
-  application-name: BUDGET-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+budget-microservice.port: "9007"
+budget-microservice.application-name: "BUDGET-MICROSERVICE"
+budget-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+budget-microservice.datasource.username: "postgres"
+budget-microservice.datasource.password: "1234"
+budget-microservice.datasource.hikari.maximum-pool-size: "2"
+budget-microservice.jpa.hibernate.ddl-auto: "update"
+budget-microservice.jpa.show-sql: "false"
+budget-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+budget-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Chat Microservice
-chat-microservice:
-  port: 9010
-  application-name: CHAT-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+chat-microservice.port: "9010"
+chat-microservice.application-name: "CHAT-MICROSERVICE"
+chat-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+chat-microservice.datasource.username: "postgres"
+chat-microservice.datasource.password: "1234"
+chat-microservice.datasource.hikari.maximum-pool-size: "2"
+chat-microservice.jpa.hibernate.ddl-auto: "update"
+chat-microservice.jpa.show-sql: "false"
+chat-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+chat-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Checklist Microservice
-checklist-microservice:
-  port: 9008
-  application-name: CHECKLIST-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+checklist-microservice.port: "9008"
+checklist-microservice.application-name: "CHECKLIST-MICROSERVICE"
+checklist-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+checklist-microservice.datasource.username: "postgres"
+checklist-microservice.datasource.password: "1234"
+checklist-microservice.datasource.hikari.maximum-pool-size: "2"
+checklist-microservice.jpa.hibernate.ddl-auto: "update"
+checklist-microservice.jpa.show-sql: "false"
+checklist-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+checklist-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Itinerary Microservice
-itinerary-microservice:
-  port: 9009
-  application-name: ITINERARY-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+itinerary-microservice.port: "9009"
+itinerary-microservice.application-name: "ITINERARY-MICROSERVICE"
+itinerary-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+itinerary-microservice.datasource.username: "postgres"
+itinerary-microservice.datasource.password: "1234"
+itinerary-microservice.datasource.hikari.maximum-pool-size: "2"
+itinerary-microservice.jpa.hibernate.ddl-auto: "update"
+itinerary-microservice.jpa.show-sql: "false"
+itinerary-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+itinerary-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Location Microservice
-location-microservice:
-  port: 9006
-  application-name: LOCATION-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+location-microservice.port: "9006"
+location-microservice.application-name: "LOCATION-MICROSERVICE"
+location-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+location-microservice.datasource.username: "postgres"
+location-microservice.datasource.password: "1234"
+location-microservice.datasource.hikari.maximum-pool-size: "2"
+location-microservice.jpa.hibernate.ddl-auto: "update"
+location-microservice.jpa.show-sql: "false"
+location-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+location-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Media Microservice
-media-microservice:
-  port: 9005
-  application-name: MEDIA-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+media-microservice.port: "9005"
+media-microservice.application-name: "LOCATION-MICROSERVICE"
+media-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+media-microservice.datasource.username: "postgres"
+media-microservice.datasource.password: "1234"
+media-microservice.datasource.hikari.maximum-pool-size: "2"
+media-microservice.jpa.hibernate.ddl-auto: "update"
+media-microservice.jpa.show-sql: "false"
+media-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+media-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Notification Microservice
-notification-microservice:
-  port: 9004
-  application-name: NOTIFICATION-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    user: thesmartpointers@gmail.com
-    password: TSPAAKSS21
-    smtp:
-      auth: true
-      connectionTimeout: 5000
-      timeout: 5000
-      writetimeout: 5000
-      startttls:
-        enable: true
 
-# Sharing Microservice
-sharing-microservice:
-  port: 9003
-  application-name: SHARING-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+notification-microservice.port: "9004"
+notification-microservice.application-name: "NOTIFICATION-MICROSERVICE"
+notification-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+notification-microservice.datasource.username: "postgres"
+notification-microservice.datasource.password: "1234"
+notification-microservice.datasource.hikari.maximum-pool-size: "2"
+notification-microservice.jpa.hibernate.ddl-auto: "update"
+notification-microservice.jpa.show-sql: "false"
+notification-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+notification-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # Timeline Microservice
-timeline-microservice:
-  port: 9012
-  application-name: TIMELINE-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+
+timeline-microservice.port: "9012"
+timeline-microservice.application-name: "TIMELINE-MICROSERVICE"
+timeline-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+timeline-microservice.datasource.username: "postgres"
+timeline-microservice.datasource.password: "1234"
+timeline-microservice.datasource.hikari.maximum-pool-size: "2"
+timeline-microservice.jpa.hibernate.ddl-auto: "update"
+timeline-microservice.jpa.show-sql: "false"
+timeline-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+timeline-microservice.jpa.properties.hibernate.format_sql: "true"
 
 # User Microservice
-user-microservice:
-  port: 9002
-  application-name: USER-MICROSERVICE
-  datasource:
-    url: jdbc:postgresql://localhost/adventureit?socketTimeout=5
-    username: postgres
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+user-microservice.port: "9002"
+user-microservice.application-name: "USER-MICROSERVICE"
+user-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+user-microservice.datasource.username: "postgres"
+user-microservice.datasource.password: "1234"
+user-microservice.datasource.hikari.maximum-pool-size: "2"
+user-microservice.jpa.hibernate.ddl-auto: "update"
+user-microservice.jpa.show-sql: "false"
+user-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+user-microservice.jpa.properties.hibernate.format_sql: "true"
 
+# Recommendation Microservice
+recommendation-microservice.port: "9013"
+recommendation-microservice.application-name: "RECOMMENDATION-MICROSERVICE"
+recommendation-microservice.datasource.url: "jdbc:postgresql://localhost/adventureit?socketTimeout=5"
+recommendation-microservice.datasource.username: "postgres"
+recommendation-microservice.datasource.password: "1234"
+recommendation-microservice.datasource.hikari.maximum-pool-size: "2"
+recommendation-microservice.jpa.hibernate.ddl-auto: "update"
+recommendation-microservice.jpa.show-sql: "false"
+recommendation-microservice.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+recommendation-microservice.jpa.properties.hibernate.format_sql: "true"
