--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - name: Install dependencies
-        working-directory: frontend
+        working-directory: frontend/adventure_it
         run: dart pub get
       - name: Analyze project source
         run: dart analyze
