--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,14 @@ on:
   
 jobs:
   build:
+    
     # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
     
     # Setup Java environment in order to build the Android app.
     - uses: actions/checkout@v1
+      
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
@@ -26,7 +28,7 @@ jobs:
       with:
         channel: 'beta' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
-    
+        working-directory: frontend/adventure_it
     # Get flutter dependencies.
     - run: flutter pub get
     
