--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,73 +9,70 @@ on:
       - Sprint*
   workflow_dispatch:
   
-# jobs:
-#   build:
-    
-#     # This job will run on ubuntu virtual machine
-#     runs-on: ubuntu-latest
-#     steps:
-    
-    
-#     # Setup Java environment in order to build the Android app.
-#     - uses: actions/checkout@v1
-      
-#     - uses: actions/setup-java@v1
-#       with:
-#         java-version: '12.x'
-    
-#     # Setup the flutter environment.
-#     - uses: subosito/flutter-action@v1
-#       with:
-#         channel: 'beta' # 'dev', 'alpha', default to: 'stable'
-#         # flutter-version: '1.12.x' # you can also specify exact version of flutter
-        
-#     # Get flutter dependencies.
-#     - name: Set up flutter
-#       working-directory: frontend/adventure_it
-#       run: flutter pub get
-    
-#     # Statically analyze the Dart code for any errors.
-#     - run: flutter analyze .
-    
-#     # Run widget tests for our flutter project.
-#     - run: flutter test
-  
 jobs:
   build:
-    name: Build
+    
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze backend
-        working-directory: backend
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: 
-          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=COS301-SE-2021_Adventure-IT
-      - name: Building docker images
-        working-directory: backend
-        run: |
-          docker-compose build
+    
+    
+    # Setup Java environment in order to build the Android app.
+    - uses: actions/checkout@v1
+      
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    
+    # Setup the flutter environment.
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
+        # flutter-version: '1.12.x' # you can also specify exact version of flutter
+        
+    # Get flutter dependencies.
+    - name: Set up flutter
+      working-directory: frontend/adventure_it
+      run: flutter pub get
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
+  
+# jobs:
+#   build:
+#     name: Build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+#       - name: Set up JDK 11
+#         uses: actions/setup-java@v1
+#         with:
+#           java-version: 11
+#       - name: Cache SonarCloud packages
+#         uses: actions/cache@v1
+#         with:
+#           path: ~/.sonar/cache
+#           key: ${{ runner.os }}-sonar
+#           restore-keys: ${{ runner.os }}-sonar
+#       - name: Cache Maven packages
+#         uses: actions/cache@v1
+#         with:
+#           path: ~/.m2
+#           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#           restore-keys: ${{ runner.os }}-m2
+#       - name: Build and analyze backend
+#         working-directory: backend
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#         run: 
+#           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=COS301-SE-2021_Adventure-IT
+#       - name: Building docker images
+#         working-directory: backend
+#         run: |
+#           docker-compose build
       
         
       
